[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "datalogger"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
embedded-sdmmc = "0.3.0"
heapless = "0.5.5"
typenum = "1.12.0"
cast = { version = "0.2.3", default-features = false }
dht11 = { version = "0.3.1", features = ["dwt"] }
sntp = "0.1.1"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal"
branch = "master"
features = ["rt", "stm32f407"]

[dependencies.stm32-eth]
git = "https://github.com/plorefice/stm32-eth"
branch = "rework-smoltcp"
features = ["stm32f4disco", "smoltcp-phy"]

# Strip logs in release mode
[dependencies.log]
version = "0.4"
features = ["release_max_level_off"]

[[bin]]
name = "datalogger"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s" # optimize for size
panic = "abort" # no need to unwind
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations