[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "datalogger"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rtfm = "0.5"
usb-device = "0.2"
usbd-serial = "0.1"
dht11 = "0.3"
cast = { version = "0.2", default-features = false }

[dependencies.atsamd-hal]
version = "0.8"
default-features = false
features = ["samd21g18a", "samd21g18a-rt", "usb"]

[[bin]]
name = "datalogger"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s" # optimize for size
panic = "abort" # no need to unwind
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations